Fix responsiveness on smaller devices

--- a/src/components/homepage/GetStarted.module.css
+++ b/src/components/homepage/GetStarted.module.css
@@ -13,4 +13,17 @@
   .terminalWrapper {
     margin-top: 2rem;
   }
+
+  .buttons {
+    display: block;
+  }
+
+  .buttons a {
+    display: block;
+    width: 100%;
+  }
+
+  .buttons a + a {
+    margin: 1rem 0 0;
+  }
 }
