--- a/src/components/homepage/Hero.module.css
+++ b/src/components/homepage/Hero.module.css
@@ -4,7 +4,7 @@
   text-align: left;
   position: relative;
   overflow: hidden;
-  padding: 8rem 0 7rem;
+  padding: 8rem 2rem 7rem;
 }
 
 .illustrationWrapper {
@@ -17,12 +17,18 @@
 
 @media (max-width: 966px) {
   .heroBanner {
-    padding: 4rem 2rem;
+    padding: 4rem 1rem;
   }
 
   .illustration {
     margin-bottom: 2rem;
     max-height: 200px;
+  }
+}
+
+@media (max-width: 350px) {
+  .heroBanner {
+    padding: 3rem 0rem;
   }
 }
 
